# subsampling-is-not-magic

./: README.md  pyproject.toml
notebooks/: Lemma_A.2_computation.nb  no_comp_derivative.nb
src/: plot.sh  plot_a_vs_b.py  plot_convergence.py  plot_defaults.py
