[tool.poetry]
name = "subsampling-is-not-magic"
version = "0.0.1"
description = ""
authors = ["authors <authors@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.13"
numpy = "1.26.0"
scipy = "1.11.2"
matplotlib = "^3.8.0"
prv-accountant = "^0.2.0"
dp-accounting = {git = "https://github.com/google/differential-privacy.git", rev = "main", subdirectory = "python"}
tqdm = "^4.66.1"
pandas = "^2.1.4"

[tool.poetry.group.dev.dependencies]
ipython = "^8.16.1"
pytest = "^7.4.2"
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
